Added about pages

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,5 +1,10 @@
 body{
-    padding-top: 60px;
+    padding-top: 120px;
+
+    /* Courtesy of uigradients.com */
+    background: #085078;
+    background: -webkit-linear-gradient(to left, #085078, #85D8CE);
+    background: linear-gradient(to left, #085078, #85D8CE);
 }
 
 .starter-template{
