--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -8,48 +8,67 @@
     <div th:replace="common/navbar :: common-navbar" />
 
     <div class="container">
-    <div class="row">
 
-        <div class="col-md-6 col-md-offset-3">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3 text-center">
 
-            <div class="well">
-
-                <div class="text-center">
-
-                    <h1 th:text="#{login.h1.text}" />
-                    <p class="lead" th:text="#{login.p.lead}" />
-
+                <div th:if="${param.error}" class="alert alert-danger alert-dismissible" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">x</span>
+                    </button>
+                    <p th:text="#{login.error.message}" />
                 </div>
+                <div th:if="${param.logout}" class="alert alert-success alert-dismissible" role="alert">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">x</span>
+                    </button>
+                    <p th:text="#{login.logout.success}" />
+                </div>
+            </div>
+        </div>
 
-                <div class="text-left">
+        <div class="row">
 
-                    <form id="loginForm"
-                          th:action="@{/login}"
-                          method="post">
+            <div class="col-md-6 col-md-offset-3">
 
-                        <div class="form-group">
-                            <label for="username" th:text="#{login.username.text}" />
-                            <input type="text" id="username" name="username" class="form-control" />
-                        </div>
+                <div class="well">
 
-                        <div class="form-group">
-                            <label for="password" th:text="#{login.password.text}" />
-                            <input type="password" id="password" name="password" class="form-control" />
-                        </div>
+                    <div class="text-center">
 
-                        <div class="form-group">
-                            <button type="submit" th:text="#{navbar.login.text}" class="btn btn-primary" />
-                        </div>
+                        <h1 th:text="#{login.h1.text}" />
+                        <p class="lead" th:text="#{login.p.lead}" />
 
-                    </form>
-                    <!--<a th:href="@{/forgotmypassword}" th:text="#{login.forgot.password.text}" />-->
+                    </div>
+
+                    <div class="text-left">
+
+                        <form id="loginForm"
+                              th:action="@{/login}"
+                              method="post">
+
+                            <div class="form-group">
+                                <label for="username" th:text="#{login.username.text}" />
+                                <input type="text" id="username" name="username" class="form-control" />
+                            </div>
+
+                            <div class="form-group">
+                                <label for="password" th:text="#{login.password.text}" />
+                                <input type="password" id="password" name="password" class="form-control" />
+                            </div>
+
+                            <div class="form-group">
+                                <button type="submit" th:text="#{navbar.login.text}" class="btn btn-primary" />
+                            </div>
+
+                        </form>
+                        <!--<a th:href="@{/forgotmypassword}" th:text="#{login.forgot.password.text}" />-->
+                    </div>
+
                 </div>
 
             </div>
 
         </div>
-
-    </div>
 
 
 
