--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -61,7 +61,7 @@
                             </div>
 
                         </form>
-                        <!--<a th:href="@{/forgotmypassword}" th:text="#{login.forgot.password.text}" />-->
+                        <a th:href="@{/forgotmypassword}" th:text="#{login.forgot.password.text}" />
                     </div>
 
                 </div>
